Vertical align bug

--- a/helpers.css
+++ b/helpers.css
@@ -208,7 +208,7 @@
   vertical-align: bottom; }
 
 .v-align-middle {
-  vertical-align: bottom; }
+  vertical-align: middle; }
 
 .v-align-top {
   vertical-align: top; }
