--- a/scss/_positioning.scss
+++ b/scss/_positioning.scss
@@ -74,7 +74,7 @@
 }
 .v-align-bottom,.v-align-middle,.v-align-top{ display: table-cell; }
 .v-align-bottom{ vertical-align: bottom; }
-.v-align-middle{ vertical-align: bottom; }
+.v-align-middle{ vertical-align: middle; }
 .v-align-top{ vertical-align: top; }
 
 /***** Full screen *****/
